--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: red"> Hello world </h1>
+    <h1 style="color: red; background-color:grey ;"> Hello world </h1>
 </body>
 </html>
