--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: red; background-color:grey ;"> Hello world </h1>
+    <h1 style="color: blue; background-color:grey ;"> Hello world </h1>
+    <button onclick="alert('this may be harmful')">click me</button>
 </body>
 </html>
